// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mathfield Render code correctly 1`] = `
[
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "hsl(204, 20%, 98%)",
          "borderColor": "gray",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                3
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                +
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              style={
                [
                  {},
                  false,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      9
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      8
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                       
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      -
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                       
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    style={
                      [
                        {
                          "flexDirection": "row",
                        },
                        false,
                      ]
                    }
                  >
                    <View
                      style={
                        {
                          "justifyContent": "center",
                        }
                      }
                    >
                      <Text
                        style={
                          [
                            {},
                            {
                              "fontSize": 24,
                            },
                          ]
                        }
                      >
                        √
                      </Text>
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "borderTopWidth": 1,
                          "flexDirection": "row",
                          "paddingVertical": 2,
                        }
                      }
                    >
                      <View>
                        <View
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            {
                              "opacity": 1,
                            }
                          }
                        >
                          <Text
                            style={
                              [
                                {},
                                false,
                              ]
                            }
                          >
                            6
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                +
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              style={
                [
                  {},
                  false,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      4
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      +
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessibilityState={
                      {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      ▢
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "borderBottomWidth": 1,
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      1
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      6
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                       
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      -
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                       
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      8
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                +
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                ▢
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                +
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              style={
                [
                  {},
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                      "opacity": 1,
                    },
                    false,
                  ],
                  false,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      t
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      e
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      x
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      t
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      V
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      a
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      r
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      2
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                +
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    false,
                  ]
                }
              >
                 
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                  },
                  {
                    "backgroundColor": "hsl(204, 50%, 90%)",
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "fontSize": 24,
                      },
                    ]
                  }
                >
                  √
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderTopWidth": 1,
                    "flexDirection": "row",
                    "paddingVertical": 2,
                  }
                }
              >
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      2
                    </Text>
                  </View>
                </View>
                <View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          false,
                        ]
                      }
                    >
                      4
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <Text>
            |
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "center",
            "aspectRatio": "1/1",
            "height": 24,
            "opacity": 1,
          }
        }
      >
        <Image
          source={
            {
              "process": [Function],
            }
          }
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <Text>
      1. serialized: 
      3 + {98 - \\sqrt{6}} + \\frac{4+\\placeholder{}}{16 - 8} + \\placeholder{} + \\smash[{"textVar2":"metaVar2"}]{textVar2} + \\sqrt{24}
    </Text>
    <Text>
      2. JSON: 
      [{"type":"text","mode":"text","value":"3"},{"type":"text","mode":"text","value":" "},{"type":"text","mode":"text","value":"+"},{"type":"text","mode":"text","value":" "},{"type":"group","body":[{"type":"text","mode":"text","value":"9"},{"type":"text","mode":"text","value":"8"},{"type":"text","mode":"text","value":" "},{"type":"text","mode":"text","value":"-"},{"type":"text","mode":"text","value":" "},{"type":"sqrt","command":"\\\\sqrt","body":[{"type":"text","mode":"text","value":"6"}]}],"latexOpen":"{","latexClose":"}"},{"type":"text","mode":"text","value":" "},{"type":"text","mode":"text","value":"+"},{"type":"text","mode":"text","value":" "},{"type":"genfrac","command":"\\\\frac","above":[{"type":"text","mode":"text","value":"4"},{"type":"text","mode":"text","value":"+"},{"type":"placeholder","command":"\\\\placeholder"}],"below":[{"type":"text","mode":"text","value":"1"},{"type":"text","mode":"text","value":"6"},{"type":"text","mode":"text","value":" "},{"type":"text","mode":"text","value":"-"},{"type":"text","mode":"text","value":" "},{"type":"text","mode":"text","value":"8"}]},{"type":"text","mode":"text","value":" "},{"type":"text","mode":"text","value":"+"},{"type":"text","mode":"text","value":" "},{"type":"placeholder","command":"\\\\placeholder"},{"type":"text","mode":"text","value":" "},{"type":"text","mode":"text","value":"+"},{"type":"text","mode":"text","value":" "},{"type":"phantom","command":"\\\\smash","metaObject":{"textVar2":"metaVar2"},"body":[{"type":"text","mode":"text","value":"t"},{"type":"text","mode":"text","value":"e"},{"type":"text","mode":"text","value":"x"},{"type":"text","mode":"text","value":"t"},{"type":"text","mode":"text","value":"V"},{"type":"text","mode":"text","value":"a"},{"type":"text","mode":"text","value":"r"},{"type":"text","mode":"text","value":"2"}]},{"type":"text","mode":"text","value":" "},{"type":"text","mode":"text","value":"+"},{"type":"text","mode":"text","value":" "},{"type":"sqrt","command":"\\\\sqrt","body":[{"type":"text","mode":"text","value":"2"},{"type":"text","mode":"text","value":"4"}]}]
    </Text>
    <Text>
      3. ASCII: 
      "3 + "98 - sqrt("6)" + ("4+)/("16 - 8)" + " + "textVar2" + sqrt("24)
       
    </Text>
    <Text>
      4. ASCII meta: 
      {"textVar2":"metaVar2"}
       
    </Text>
  </View>,
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />,
]
`;

exports[`VirtualKeyboardElement Render code correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "marginHorizontal": 10,
        "marginVertical": 10,
        "maxWidth": 800,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 5,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontWeight": "bold",
              },
              {
                "color": "hsl(204, 50%, 50%)",
              },
            ]
          }
        >
          Basic
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            7
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            8
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            9
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            +
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 0.5,
              },
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "justifyContent": "center",
                "minWidth": 40,
                "overflow": "hidden",
              },
              {
                "margin": 2,
                "padding": 5,
              },
            ]
          }
        />
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            (
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            )
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            4
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            5
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            6
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            -
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "justifyContent": "center",
                "minWidth": 40,
                "overflow": "hidden",
              },
              {
                "margin": 2,
                "padding": 5,
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "flex": 0.5,
              },
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "justifyContent": "center",
                "minWidth": 40,
                "overflow": "hidden",
              },
              {
                "margin": 2,
                "padding": 5,
              },
            ]
          }
        />
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                  },
                  false,
                ]
              }
            >
              <View
                style={
                  {
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "fontSize": 14,
                      },
                    ]
                  }
                >
                  √
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderTopWidth": 1,
                    "flexDirection": "row",
                    "paddingVertical": 2,
                  }
                }
              >
                <View>
                  <View
                    accessibilityState={
                      {
                        "disabled": true,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      ▢
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            1
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            2
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            3
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            *
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 0.5,
              },
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "justifyContent": "center",
                "minWidth": 40,
                "overflow": "hidden",
              },
              {
                "margin": 2,
                "padding": 5,
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "justifyContent": "center",
                "minWidth": 40,
                "overflow": "hidden",
              },
              {
                "margin": 2,
                "padding": 5,
              },
            ]
          }
        />
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            x
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "justifyContent": "center",
                "minWidth": 40,
                "overflow": "hidden",
              },
              {
                "margin": 2,
                "padding": 5,
              },
            ]
          }
        />
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            0
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            ,
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <View>
            <View
              style={
                [
                  {},
                  false,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View>
                  <View
                    accessibilityState={
                      {
                        "disabled": true,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      ▢
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "borderBottomWidth": 1,
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View>
                  <View
                    accessibilityState={
                      {
                        "disabled": true,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        [
                          {},
                          {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      ▢
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "flex": 0.5,
              },
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "justifyContent": "center",
                "minWidth": 40,
                "overflow": "hidden",
              },
              {
                "margin": 2,
                "padding": 5,
              },
            ]
          }
        />
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            ᐸ
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "hsl(204, 20%, 100%)",
              "borderRadius": 4,
              "elevation": 20,
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "margin": 2,
              "minWidth": 40,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 5,
              "shadowColor": "hsl(0, 0%, 50%)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.02,
              "shadowRadius": 7.794871794871795,
            }
          }
        >
          <Text>
            ᐳ
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
